[package]
name = "utcp-skill-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP & networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography & security
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }

# State management
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Concurrency
tokio-util = "0.7"
dashmap = "5.5"
parking_lot = "0.12"

# Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
url = "2.4"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
mockito = "1.2"